src/styles/globals.scss
@import 'node_modules/modern-normalize/modern-normalize.css';
@import url('https://fonts.googleapis.com/css2?family=Nabla&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
}

@layer components {
}

@layer utilities {
  .btn-follow-theme {
    @apply text-gray-700  hover:text-white dark:border-white/70 dark:text-white/70 dark:hover:bg-dark-background;
  }
  .smooth-effect {
    @apply transition-all duration-300;
  }
  .relative-x-center {
    @apply left-1/2 -translate-x-1/2;
  }
  .absolute-center {
    @apply flex items-center justify-center;
  }
  .full-size {
    @apply h-full w-full;
  }
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 62.5%;
  -webkit-tap-highlight-color: transparent;
  scroll-behavior: smooth;
  scroll-snap-type: y mandatory;
}

body {
  font-size: 1.6rem;
  text-rendering: optimizeSpeed;
  height: fit-content;
  overflow-x: hidden;
  transition-duration: 250ms;
}

*:focus {
  outline: none;
}

::-webkit-scrollbar {
  width: 4px;
}

::-webkit-scrollbar-thumb {
  @apply rounded-2xl bg-gray-400;
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

//thanks to: https://9elements.github.io/fancy-border-radius
.random-border-radius-var-1 {
  border-radius: 30% 70% 70% 30% / 38% 36% 64% 62%;
}
.random-border-radius-var-2 {
  border-radius: 43% 57% 53% 47% / 38% 32% 68% 62%;
}

.tab-active {
  background-color: #ffffff !important;
}

.quill {
  .ql-toolbar {
    top: 0;
    position: sticky;
    background-color: #ffffff;
  }
}

